PROJECT(TyphonIO C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

SET(TYPHONIO_MAJOR_VERSION 1)
SET(TYPHONIO_MINOR_VERSION 6)

SET(TYPHONIO_VERSION "${TYPHONIO_MAJOR_VERSION}.${TYPHONIO_MINOR_VERSION}")

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

OPTION(BUILD_TIO_SHARED "BUILD SHARED LIBRARY" OFF)
OPTION(BUILD_FORTRAN_LIBRARY "BUILD_FORTRAN_LIBRARY" OFF)

# Enable Package Target to be build with CPack
INCLUDE(CPack)

## MPI
FIND_PACKAGE(MPI REQUIRED)
LIST(APPEND TIO_EXTERNAL_LIBS ${MPI_C_LIBRARIES})
INCLUDE_DIRECTORIES(${MPI_C_INCLUDE_PATH})
## HDF5 
FIND_PACKAGE(HDF5 COMPONENTS C HL REQUIRED)
LIST(APPEND TIO_EXTERNAL_LIBS ${HDF5_C_LIBRARIES})
INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})

# Src Subdirectory
INCLUDE_DIRECTORIES(typhonio)
ADD_SUBDIRECTORY(src)

# Definitions For Src
ADD_DEFINITIONS(-D_TYPHIO_HDF5)
ADD_DEFINITIONS(-D_TYPHIO_PARALLEL)